--- a/src/__slider1.pug
+++ b/src/__slider1.pug
@@ -26,34 +26,37 @@ mixin sliderSlickInMain
 
 mixin sliderSwiperInMain
   .julySlider__area.w0
-    .julySlider__outer.w1
-      .julySlider.swiper-container
-        .swiper-wrapper
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/june/001.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/xslider/03.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/june/003.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/xslider/01.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/xslider/04.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/june/006.jpg", alt="")
-          .julySlider__item.swiper-slide
-            a(href="#")
-              img(src="assets/img/xslider/01.jpg", alt="")
-      .julySlider__pag
-        
-        .julySlider__Prev
-          i.icon-arr-left1
-        .julySlider__pagination
-        .julySlider__Next
-          i.icon-arr-right1
+    .sliderPlus.w1
+      .julySlider__outer
+        .julySlider.swiper-container
+          .swiper-wrapper
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/june/001.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/xslider/03.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/june/003.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/xslider/01.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/xslider/04.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/june/006.jpg", alt="")
+            .julySlider__item.swiper-slide
+              a(href="#")
+                img(src="assets/img/xslider/01.jpg", alt="")
+        .julySlider__pag
+          .julySlider__Prev
+            i.icon-arr-left1
+          .julySlider__pagination
+          .julySlider__Next
+            i.icon-arr-right1
+      .promoBox1__area
+        a.promoBox1(href="")
+          img(src="assets/img/june/006.jpg", alt="")
