--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,7 @@ include __const
 include __header
 include __menu
 include __slider1
+include __wideBlock
 include __mainBox
 include __blog
 include __newsInMain
@@ -26,6 +27,7 @@ body
 
   .site__center
     +sliderSwiperInMain
+    +wideBlock
     +mainBox
     +mainContent
     +blog
