--- a/src/__slider1.pug
+++ b/src/__slider1.pug
@@ -59,5 +59,5 @@ mixin sliderSwiperInMain
             i.icon-arr-right1
       .promoBox1__area
         a.promoBox1(href="")
-          img.creative1_dt(src="assets/img/june/006.jpg", alt="")
+          img.creative1_dt(src="assets/img/june/test2.JPG", alt="")
           img.creative1_mb(src="assets/img/june/005.jpg", alt="")
