--- a/src/assets/css/__slider1.css
+++ b/src/assets/css/__slider1.css
@@ -161,7 +161,10 @@
   margin: 10px 0 10px;
 }
 .julySlider__outer {
-  width: 66.666%;
+  /* width: 66.666%; */
+  flex: 1;
+  flex-grow: 1;
+  min-width: 0;
 }
 
 .julySlider {
@@ -350,7 +353,7 @@
 }
 
 .promoBox1__area {
-  width: 33.333%;
+  /* width: 33.333%; */
   padding: 0 0 0 20px;
 }
 
@@ -360,11 +363,12 @@
   height: 250px;
   display: flex;
   overflow: hidden;
+  justify-content: center;
 }
 
 .promoBox1 img {
   display: block;
-  width: 100%;
+  height: 100%;
   object-fit: cover;
   transition: all 0.5s;
 }
