--- a/src/__slider1.pug
+++ b/src/__slider1.pug
@@ -59,7 +59,8 @@ mixin sliderSwiperInMain
             i.icon-arr-right1
       .promoBox1__area
         a.promoBox1(href="")
-          img.creative1_dt(src="assets/img/june/test250-380.JPG", alt="")
-          img.creative1_mb(src="assets/img/june/005.jpg", alt="")
+          img.creative1(src="assets/img/creative/m22-320х300.jpg", alt="")
+          img.creative2(src="assets/img/creative/m22-1200х150.jpg", alt="")
+          img.creative3(src="assets/img/creative/m22-600х150.jpg", alt="")
 
 
