--- a/src/index.pug
+++ b/src/index.pug
@@ -28,7 +28,7 @@ body
   .site__center
     +sliderSwiperInMain
     //- +testBlock
-    +wideBlock
+    //- +wideBlock
     +mainBox
     +mainContent
     +blog
