--- a/src/__header.pug
+++ b/src/__header.pug
@@ -8,7 +8,7 @@ mixin header
       .header__line
         .logo1
           a(href="#")
-            img(src="assets/img/logo140w.png", alt="")
+            img(src="assets/img/logo-1.svg", alt="Центр косметологии и красоты Бьюти Лаунж")
         .header__phoneArea
           .header__phoneItem
             span Центр косметлогии:
