--- a/src/__wideBlock.pug
+++ b/src/__wideBlock.pug
@@ -2,4 +2,5 @@ mixin wideBlock
   .wideBlock__area.w0
     .wideBlock.w1
       a.wideBlock__link(href="")
-        img(src="assets/img/wide/wide1.jpg", alt="")
+        img.creative2_all(src="assets/img/creative/m22-1200х150.jpg", alt="")
+        img.creative3(src="assets/img/creative/m22-600х150.jpg", alt="")
