--- a/src/assets/css/__wideblock.css
+++ b/src/assets/css/__wideblock.css
@@ -1,15 +1,14 @@
 .wideBlock {
   position: relative;
-  margin-bottom: 10px;
 }
 
 .wideBlock__link {
   display: block;
   width: 100%;
   text-decoration: none;
+  margin: 10px 0;
 }
 
 .wideBlock img {
-  display: block;
   width: 100%;
 }
