--- a/src/__newBlocks.pug
+++ b/src/__newBlocks.pug
@@ -11,3 +11,24 @@ mixin outerLinkBox
         .outerLinkBox__item
           .outerLinkBox__itemTitle Название процедуры или какого-либо оборудования для перехода
           a.outerLinkBox__itemLink(href="#") Подробнее...
+
+
+mixin pageContainer
+  .pageContainer__area
+    .pageContainer__outer
+      .pageContainer.clearfix
+        .pageContainer__itemOuter
+          a.pageContainer__item(href="")
+            .pageContainer__itemImg
+              img(src="assets/img/blog/intim-piling.jpg", alt="")
+            span Заголовок дочернего ресурса
+        .pageContainer__itemOuter
+          a.pageContainer__item(href="")
+            .pageContainer__itemImg
+              img(src="assets/img/blog/juvederm3003.jpg", alt="")
+            span Заголовок дочернего ресурса
+        .pageContainer__itemOuter
+          a.pageContainer__item(href="")
+            .pageContainer__itemImg
+              img(src="assets/img/blog/kydra102.jpg", alt="")
+            span Заголовок дочернего ресурса
