--- a/src/assets/css/__newBlocks_media.css
+++ b/src/assets/css/__newBlocks_media.css
@@ -27,10 +27,16 @@
     flex-direction: column;
     padding: 10px;
   }
+  .pageContainer__itemOuter {
+    width: 50%;
+  }
 }
 
 @media only screen and (max-width: 400px) {
 }
 
 @media only screen and (max-width: 320px) {
+  .pageContainer__itemOuter {
+    width: 100%;
+  }
 }
