--- a/src/textPage.pug
+++ b/src/textPage.pug
@@ -38,6 +38,7 @@ body
           .content
             +tempContent
         +outerLinkBox
+        +pageContainer
         .block__video
           .title1
             h2 Видео
