--- a/src/assets/css/__slider1.css
+++ b/src/assets/css/__slider1.css
@@ -158,7 +158,7 @@
 .julySlider__area {
   position: relative;
   width: 100%;
-  margin: 10px 0 10px;
+  margin: 0 0 10px;
 }
 .julySlider__outer {
   /* width: 66.666%; */
