--- a/src/textPage.pug
+++ b/src/textPage.pug
@@ -37,6 +37,10 @@ body
         .textPage.clearfix
           .content
             +tempContent
+        +promoTovar
+        .textPage.clearfix
+          .content
+            +tempContent
         +outerLinkBox
         +pageContainer
         .block__video
