--- a/src/__mainBox.pug
+++ b/src/__mainBox.pug
@@ -4,7 +4,7 @@ mixin mainBox
       .mainBox.clearfix
         
         .mainBox__itemOuter.mainBox__itemOuter_rightBox
-          .mainBox__item
+          .mainBox__item.ny_bg1
             .rightBox__innerCover
               img.kv-img(src="assets/img/w285h285.png", alt="")
               img.kv-img(src="assets/img/w285h285.png", alt="")
