--- a/src/__newBlocks.pug
+++ b/src/__newBlocks.pug
@@ -32,3 +32,36 @@ mixin pageContainer
             .pageContainer__itemImg
               img(src="assets/img/blog/kydra102.jpg", alt="")
             span Заголовок дочернего ресурса
+
+mixin promoTovar
+  .promoTovar__area
+    .promoTovar__outer
+      .promoTovar
+        .promoTovar__itemOuter
+          .promoTovar__item
+            .promoTovar__itemImg
+              img(src="assets/img/creative/ng1.jpg", alt="")
+            .promoTovar__itemInfo
+              .promoTovar__itemTitle Подарочный сертификат
+              .promoTovar__itemDesc на процедуры в Бьюти Лаунж
+              .promoTovar__itemNominal 3000 &#8381
+            a.promoTovar__itemLink(href="") купить
+        .promoTovar__itemOuter
+          .promoTovar__item
+            .promoTovar__itemImg
+              img(src="assets/img/creative/ng1.jpg", alt="")
+            .promoTovar__itemInfo
+              .promoTovar__itemTitle Подарочный сертификат
+              .promoTovar__itemDesc на процедуры в Бьюти Лаунж
+              .promoTovar__itemNominal 5000 &#8381
+            a.promoTovar__itemLink(href="") купить
+        .promoTovar__itemOuter
+          .promoTovar__item
+            .promoTovar__itemImg
+              img(src="assets/img/creative/ng1.jpg", alt="")
+            .promoTovar__itemInfo
+              .promoTovar__itemTitle Подарочный сертификат
+              .promoTovar__itemDesc на процедуры в Бьюти Лаунж
+              .promoTovar__itemNominal 10000 &#8381
+            a.promoTovar__itemLink(href="") купить
+            
