--- a/src/assets/css/__header.css
+++ b/src/assets/css/__header.css
@@ -2,6 +2,7 @@
   padding: 10px 0 2px;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
   /* background: var(--bg1); */
 }
 
@@ -214,7 +215,14 @@
 
 .sIg {
   background: #d6249f;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
   /* box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25); */
 }
 
