--- a/src/assets/css/__newBlocks.css
+++ b/src/assets/css/__newBlocks.css
@@ -106,3 +106,92 @@ a.outerLinkBox__itemLink:hover {
 .pageContainer__item:hover img {
   transform: scale(1.05);
 }
+
+.promoTovar__area {
+  width: 100%;
+}
+
+.promoTovar__outer {
+  width: 100%;
+  padding: 10px 0 20px;
+}
+
+.promoTovar {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 -10px;
+}
+
+.promoTovar__itemOuter {
+  width: 33.333%;
+  padding: 10px;
+}
+
+.promoTovar__item {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background: #fff;
+  border: 1px solid var(--bg2);
+}
+
+.promoTovar__itemImg {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.promoTovar__itemImg img {
+  display: block;
+  width: 100%;
+}
+
+.promoTovar__itemInfo {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.promoTovar__itemTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--tc0);
+  font-size: 1.375rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+.promoTovar__itemDesc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--tc0);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.promoTovar__itemNominal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--tc0);
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+
+.promoTovar__itemLink {
+  display: flex;
+  justify-content: center;
+  padding: 10px 30px;
+  background: var(--link1);
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 0 auto;
+  transition: all 0.3s;
+}
+
+.promoTovar__itemLink:hover {
+  padding: 10px 40px;
+}
