--- a/src/__menu.pug
+++ b/src/__menu.pug
@@ -54,7 +54,17 @@ mixin topMenuAdaptive
 
 
 mixin leftMenu
+  
   nav.leftMenu__outer
+    nav.solutionMenu__outer
+      .solution__btn Решить проблему
+      ul.solution
+        li
+          a(href="") Лифтинг лица
+        li
+          a(href="") Пигментация
+        li
+          a(href="") Акне
     ul.leftMenu
       li
         a(href="") Все процедуры
