--- a/src/assets/css/__header.css
+++ b/src/assets/css/__header.css
@@ -115,25 +115,28 @@
 }
 
 .header__callAction {
-  border: 1px solid var(--bg2);
+  /* border: 1px solid var(--bg2); */
   padding: 0.625rem 1.25rem;
   cursor: pointer;
   white-space: nowrap;
   margin-bottom: 5px;
+  background: var(--color1);
+  transition: all 0.3s;
 }
 .header__callAction:hover {
-  border: 1px solid var(--color1);
+  /* border: 1px solid var(--color1); */
+  background: var(--tc0);
 }
 
 .header__callAction span {
   font-size: 1rem;
   line-height: 1;
-  color: var(--color1);
+  color: #fff;
 }
 
 .header__callAction i {
   font-size: 1.25rem;
-  color: var(--color1);
+  color: #fff;
   line-height: 1;
   display: none;
 }
