--- a/src/assets/css/__menu.css
+++ b/src/assets/css/__menu.css
@@ -329,7 +329,7 @@ li.endLeftBlock {
 /* leftMenu */
 
 .leftMenu__outer {
-  width: 25%;
+  width: 20%;
 }
 
 .leftMenu {
@@ -400,4 +400,46 @@ li.endLeftBlock {
   background: var(--color1);
   border-bottom: 1px solid #fff;
   color: #fff;
+}
+
+.solutionMenu__outer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.solution__btn {
+  background: var(--tc0);
+  padding: 15px 20px;
+  cursor: pointer;
+  white-space: nowrap;
+  margin-bottom: 5px;
+  background: var(--color1);
+  transition: all 0.3s;
+  color: #fff;
+}
+.solution__btn:hover,
+.solution__btn.active,
+.solution__btn:focus {
+  background: var(--tc0);
+}
+
+.solution {
+  display: none;
+}
+
+.solution li {
+  list-style: none;
+}
+
+.solution li a {
+  text-decoration: none;
+  padding: 5px 10px;
+  display: flex;
+  font-size: 1rem;
+  color: var(--tc0);
+}
+
+.solution li a:hover {
+  text-decoration: underline;
 }
