--- a/src/__menu.pug
+++ b/src/__menu.pug
@@ -66,41 +66,41 @@ mixin leftMenu
         li
           a(href="") Акне
     ul.leftMenu
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Все процедуры
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a.hasInner(href="") Инъекционная косметология
           .openInner
         ul
-          li.lev1
+          li.lev2
             a(href="") Candela GENTLELASEPRO-U
-          li.lev1
+          li.lev2
             a(href="") Venus Legasy
-          li.lev1
+          li.lev2
             a(href="") Fotona
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Инъекционная косметология
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Эстетическая косметология
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Эстетика тела
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Дерматология
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Трихология
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Nail Bar
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Hair стиль
-      li.lev0
-        .lev0wrapper
+      li.lev1
+        .lev_a_wrapper
           a(href="") Brow Bar
