--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -1,3 +1,5 @@
+include __mbMenu
+
 mixin footer
   .footer__area.w0
     footer.footer.w1
@@ -51,3 +53,4 @@ mixin footer
           //-   i.icon-ok
           //- a(href='#')
           //-   i.icon-ig
+  +mbMenu
