--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -75,6 +75,9 @@
 @import "__newBlocks.css";
 @import "__newBlocks_media.css";
 
+@import "__mbMenu.css";
+@import "__mbMenu_media.css";
+
 /* в самом низу */
 @import "main.css";
 @import "media.css";
