--- a/src/assets/css/xandercode.css
+++ b/src/assets/css/xandercode.css
@@ -34,6 +34,11 @@
   --title1bg: #e6e6e6;
 }
 
+.stop {
+  overflow: hidden;
+  padding-right: 0;
+}
+
 .w0 {
   width: 100%;
   position: relative;
@@ -110,4 +115,20 @@ a.hover {
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+}
+
+.xScroll::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: var(--colorLightGrey);
+}
+
+.xScroll::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: var(--colorLightGrey);
+}
+
+.xScroll::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--tc0);
 }
