--- a/src/assets/fonts/demo/style.css
+++ b/src/assets/fonts/demo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1x9wrb');
-  src:  url('fonts/icomoon.eot?1x9wrb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1x9wrb') format('truetype'),
-    url('fonts/icomoon.woff?1x9wrb') format('woff'),
-    url('fonts/icomoon.svg?1x9wrb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?kvr3na');
+  src:  url('fonts/icomoon.eot?kvr3na#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kvr3na') format('truetype'),
+    url('fonts/icomoon.woff?kvr3na') format('woff'),
+    url('fonts/icomoon.svg?kvr3na#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-concealer:before {
+  content: "\e956";
+}
+.icon-darts:before {
+  content: "\e957";
+}
+.icon-list:before {
+  content: "\e959";
+}
 .icon-down3:before {
   content: "\e954";
 }
