--- a/src/assets/css/__sevices.css
+++ b/src/assets/css/__sevices.css
@@ -32,6 +32,8 @@
   display: flex;
   position: relative;
   overflow: hidden;
+  flex-direction: column;
+  border: 1px solid var(--x1greyLight);
 }
 
 .serv__itemImg {
@@ -47,15 +49,16 @@
 }
 
 .serv__item span {
-  position: absolute;
+  /* position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
-  height: 25%;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 1);
+
   color: #000;
   font-size: 1rem;
   text-align: center;
@@ -64,7 +67,12 @@
   z-index: 10;
 }
 
+.serv__item:hover {
+  border: 1px solid var(--color1);
+}
+
 .serv__item:hover span {
-  background: rgba(255, 255, 255, 0.9);
-  color: var(--color1);
+  /* background: rgba(255, 255, 255, 0.9); */
+  background: var(--color1);
+  color: #fff;
 }
