--- a/src/assets/css/__header_media.css
+++ b/src/assets/css/__header_media.css
@@ -60,6 +60,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10px;
+    display: none;
   }
   .header__callAction2 {
     width: auto;
@@ -80,7 +81,7 @@
 
 @media only screen and (max-width: 400px) {
   .logo1 {
-    width: 80px;
+    width: 75px;
   }
 }
 
