--- a/src/__const.pug
+++ b/src/__const.pug
@@ -48,3 +48,14 @@ mixin search1
             input.search1__input(type='text', name='', value='', placeholder='Поиск по сайту...')
             button.search1__btn(type='submit')
               i.icon-search1
+
+mixin search2
+  .search1__wrapper
+    .search1__close
+      i.icon-close1
+    .search1__outer
+      .search1__box
+        form.search1(action='#', method='get')
+          input.search1__input(type='text', name='', value='', placeholder='Поиск по сайту...')
+          button.search1__btn(type='submit')
+            i.icon-search1
