--- a/src/__mbMenu.pug
+++ b/src/__mbMenu.pug
@@ -3,6 +3,15 @@ include __menu
 mixin mbMenu
   .mbMenu__overlay
   .mbMenu__area
+    .mbMenu__openBox.mbMenu__openBox_mainMenuJs
+      .mbMenu__openBoxInner
+        .mbMenu__openBoxTitle
+          span Главное меню
+          .mbMenu__openBoxClose
+            i.icon-close1
+        .mbMenu__openBoxContent.xScroll
+          .mbMenu__openBoxContentInner
+            +leftMenuAdaptive
     .mbMenu__openBox.mbMenu__openBox_servJs
       .mbMenu__openBoxInner
         .mbMenu__openBoxTitle
@@ -21,12 +30,21 @@ mixin mbMenu
         .mbMenu__openBoxContent.xScroll
           .mbMenu__openBoxContentInner
             +onlySolutions
+    .mbMenu__openBox.mbMenu__openBox_searchJs
+      .mbMenu__openBoxInner
+        .mbMenu__openBoxTitle
+          span Поиск по сайту
+          .mbMenu__openBoxClose
+            i.icon-close1
+        .mbMenu__openBoxContent.xScroll
+          .mbMenu__openBoxContentInner
+            +search2
 
     .mbMenu__fake
     .mbMenu__outer
       .mbMenu
         .mbMenu__itemOuter
-          a.mbMenu__item.menuButton1__area_JS(href="#")
+          a.mbMenu__item.mbMenu__mainBtn_JS(href="#")
             i.icon-list
             span Главное меню
         .mbMenu__itemOuter
@@ -38,6 +56,6 @@ mixin mbMenu
             i.icon-darts
             span Решить проблему
         .mbMenu__itemOuter
-          a.mbMenu__item.topSearch_JS(href="#")
+          a.mbMenu__item.mbMenu__searchBtn_JS(href="#")
             i.icon-search2
             span Поиск
