--- a/src/assets/css/__menu_media.css
+++ b/src/assets/css/__menu_media.css
@@ -59,6 +59,53 @@
   .leftMenu li.lev1 .lev_a_wrapper > a {
     padding: 0.625rem 3rem 0.625rem 0.625rem;
   }
+  .leftMenu li.lev1.active .lev_a_wrapper > a {
+    background: var(--tc0);
+    border-bottom: 1px solid #fff;
+    color: #fff;
+  }
+  .leftMenu li.lev1.active .lev_a_wrapper .openInner {
+    background: var(--tc0);
+    border-bottom: 1px solid #fff;
+  }
+  .leftMenu li.lev2.active > a {
+    background: var(--tc0);
+    color: #fff;
+  }
+  .leftMenu li.lev2.active > a:before {
+    background: #fff;
+  }
+
+  .solution li {
+    padding: 0 0 5px;
+    width: 100%;
+  }
+
+  .solution li a {
+    display: block;
+    padding: 0.625rem 2.25rem 0.625rem 0.625rem;
+    text-decoration: none;
+    width: 100%;
+    font-size: 1rem;
+    line-height: 1.3;
+    font-weight: 500;
+    color: var(--tc0);
+    background: var(--x1greySuperLight);
+    border-bottom: 1px solid var(--bg2);
+    transition: all 0.3s;
+    position: relative;
+  }
+  .solution li.active a {
+    color: #fff;
+    background: var(--tc0);
+    border-bottom: 1px solid var(--tc0);
+  }
+  .search1__box {
+    width: 100%;
+  }
+  .search1__close {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 600px) {
