--- a/src/assets/css/__header.css
+++ b/src/assets/css/__header.css
@@ -41,19 +41,30 @@
   align-items: center;
 }
 
-.topLine__inner span {
+.topLine__inner > span {
   font-size: 0.875rem;
   line-height: 1;
+  color: var(--tc0);
 }
 .topLine__inner a {
   font-size: 0.875rem;
   line-height: 1;
   margin-left: 20px;
-  color: var(--tc1);
+  color: var(--tc0);
   text-decoration: none;
 }
 .topLine__inner a:hover {
   text-decoration: underline;
+}
+
+.topLine__inner a span {
+  font-size: 0.875rem;
+  line-height: 1;
+  color: var(--tc0);
+}
+
+.topLine__inner a i {
+  display: none;
 }
 
 .header__line {
@@ -94,11 +105,24 @@
 }
 .header__phoneItem a {
   font-size: 1.125rem;
-  color: var(--tc1);
+  color: var(--tc0);
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 .header__phoneItem a:hover {
   text-decoration: underline;
+}
+
+.header__phoneItem a > i {
+  font-size: 1.125rem;
+  color: var(--tc0);
+  margin: 0 5px 0 0;
+  display: none;
+}
+.header__phoneItem a > span {
+  font-size: 1.125rem;
+  color: var(--tc0);
 }
 
 .header__phoneItemText {
@@ -112,6 +136,23 @@
   align-items: center;
   justify-content: space-between;
   width: 35%;
+}
+
+.igTopBtn {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  background: var(--tc0);
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  display: none;
+}
+
+.igTopBtn i {
+  font-size: 1rem;
+  color: #fff;
 }
 
 .header__callAction {
