--- a/src/__header.pug
+++ b/src/__header.pug
@@ -32,8 +32,9 @@ mixin header
           a.header__callAction2(href="https://n322952.yclients.com/" target="_blank" title="Заказать звонок")
             span Онлайн запись
             i.icon-calendar2
-        .igTopBtn
-          i.icon-instagram2
+        .igTopBtn__area
+          .igTopBtn
+            i.icon-instagram2
         .socialLink
           a(href="#")
             p Центр косметологии и красоты
@@ -54,7 +55,24 @@ mixin header
             //-   i.icon-vk
             //- a(href="#").sOk
             //-   i.icon-ok
-
+  .mbMenu__outer
+    .mbMenu
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__mainBtn_JS(href="#")
+          i.icon-list
+          span Главное меню
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__servBtn_JS(href="#")
+          i.icon-concealer
+          span Услуги
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__solutionBtn_JS(href="#")
+          i.icon-darts
+          span Решить проблему
+      .mbMenu__itemOuter
+        a.mbMenu__item.mbMenu__searchBtn_JS(href="#")
+          i.icon-search2
+          span Поиск
 
 
         
