--- a/src/assets/css/__header.css
+++ b/src/assets/css/__header.css
@@ -13,11 +13,10 @@
   align-items: center;
   width: 100%;
 }
-.topLine:before {
+/* .topLine:before {
   content: "";
   height: 1px;
   margin-right: 15px;
-  /* margin-left: 15px; */
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -27,14 +26,13 @@
 .topLine:after {
   content: "";
   height: 1px;
-  /* margin-right: 15px; */
   margin-left: 15px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
   background-color: var(--bg2);
-}
+} */
 
 .topLine__inner {
   display: flex;
@@ -138,20 +136,37 @@
   width: 35%;
 }
 
+.igTopBtn__area {
+  order: 2;
+  width: 35%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .igTopBtn {
   position: relative;
-  width: 2rem;
-  height: 2rem;
-  background: var(--tc0);
+  width: 3.3rem;
+  height: 3.3rem;
+  /* background: var(--tc0); */
   /* display: flex; */
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+  border-radius: 40%;
   display: none;
+
+  background: #d6249f;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
 }
 
 .igTopBtn i {
-  font-size: 1rem;
+  font-size: 2rem;
   color: #fff;
 }
 
