--- a/src/__footer.pug
+++ b/src/__footer.pug
@@ -53,4 +53,6 @@ mixin footer
           //-   i.icon-ok
           //- a(href='#')
           //-   i.icon-ig
-  +mbMenu
+  //- +mbMenu
+  +mbMenu_01_2021
+  +igMobile
