--- a/src/assets/css/__mbMenu_media.css
+++ b/src/assets/css/__mbMenu_media.css
@@ -23,6 +23,9 @@
   .mbMenu__area {
     display: block;
   }
+  .mbMenu__outer {
+    display: block;
+  }
   .solution {
     display: block;
   }
