--- a/src/assets/css/__header_media.css
+++ b/src/assets/css/__header_media.css
@@ -80,6 +80,7 @@
   .logo1 {
     max-width: 140px;
     order: 1;
+    width: 30%;
   }
   .header__phoneArea {
     order: 0;
@@ -137,12 +138,18 @@
   /* .header__line {
     justify-content: flex-end;
   } */
+  .igTopBtn__area {
+    display: flex;
+  }
 }
 
 @media only screen and (max-width: 400px) {
   .logo1 {
-    width: 90px;
-    width: 30%;
+    /* width: 90px; */
+    width: 20%;
+  }
+  .header__phoneArea {
+    width: 40%;
   }
 }
 
