--- a/src/assets/css/__menu_media.css
+++ b/src/assets/css/__menu_media.css
@@ -8,6 +8,13 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .topMenu li a {
+    font-size: 1rem;
+    padding: 5px 10px;
+  }
+  .topMenu li {
+    margin-right: 10px;
+  }
 }
 
 @media only screen and (max-width: 920px) {
